# qubit

./: .gitignore  COPYRIGHT  Cargo.toml  LICENSE-MIT  Makefile.toml  README.md  build.rs  deny.toml  memory.x  rust-toolchain.toml
.cargo/: config-extend.toml  config.toml
.github/workflows/: build.yml  license.yml
.zed/: debug.json  settings.json
LICENSES/: 0BSD.txt
crates/kb_rs/: Cargo.toml  build.rs
crates/kb_rs/src/: keyboard.rs  keymap.rs  main.rs  misc.rs  report.rs  time.rs  usb.rs
crates/kb_rs_macro_derive/: Cargo.toml
crates/kb_rs_macro_derive/src/: lib.rs  matrix.rs
crates/kb_rs_macro_derive/src/matrix/: input.rs  parse.rs  row_col.rs
crates/keyboards/: Cargo.toml
crates/keyboards/models/cloudgazing/moonquartz/: config.toml
crates/keyboards/models/custom/: config.toml  memory.x
crates/keyboards/models/moonquartz/: config.toml  memory.x
crates/keyboards/src/: codes.rs  config.rs  keycodes.rs  lib.rs  linker.rs
crates/keyboards/src/config/: parse.rs
crates/qubit/: Cargo.toml  build.rs
crates/qubit/src/: connection.rs  keyboard.rs  main.rs  parse.rs  report.rs  setup.rs  time.rs  usb.rs
crates/qubit/src/connection/: hid.rs  serial.rs  silverplate.rs
crates/qubit/src/setup/: rp2040.rs  stm32f411.rs
crates/qubit/src/usb/: keyboard.rs  serial.rs
crates/qubit/src/usb/keyboard/: descriptor.rs  keymaps.rs  report.rs  silverplate.rs
crates/qubit_config/: Cargo.toml
crates/qubit_config/src/: cargo.rs  general.rs  keyboard.rs  lib.rs  linker.rs  mcu.rs  parse.rs  usb.rs  version.rs
crates/qubit_config/src/linker/: cortex_m.rs  mcu.rs
crates/qubit_config/src/linker/family/: cortex_m.rs
crates/qubit_config/src/linker/mcu/: rp2040.rs  stm32f411.rs
crates/qubit_device/: Cargo.toml
crates/qubit_device/src/: lib.rs  models.rs
crates/qubit_device/src/models/: cloudgazing.rs
crates/qubit_device/src/models/cloudgazing/: obsidian.rs  quartz.rs
crates/qubit_macros/: Cargo.toml
crates/qubit_macros/src/: config.rs  date.rs  hid.rs  import.rs  keyboard.rs  lib.rs  matrix.rs
crates/qubit_macros/src/keyboard/: attributes.rs  fields.rs
crates/qubit_macros/src/matrix/: keymap.rs  parse.rs  row_col.rs
kb_rs_derive/: Cargo.toml
kb_rs_derive/src/: lib.rs  matrix.rs  row_col.rs
scripts/: _prepare.rs  prepare.rs
src/: boilerplate.rs  buff.rs  keyboard.rs  main.rs  time.rs
src/keyboard/: key.rs
