[workspace]
resolver = "3"
members = [
  "crates/qubit",
  "crates/qubit_config",
  "crates/qubit_device",
  "crates/qubit_macros",
]
default-members = ["crates/qubit"]

[workspace.package]
authors = ["cloudgazing"]
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
chrono = "0.4.41"
constcat = "0.6.1"
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embedded-hal = "1.0.0"
fugit = "0.3.7"
heapless = { version = "0.8.0" }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
prettyplease = "0.2.36"
proc-macro2 = "1.0.95"
qubit_config = { path = "crates/qubit_config" }
qubit_device = { path = "crates/qubit_device" }
qubit_macros = { path = "crates/qubit_macros" }
quote = "1.0.40"
rp2040-boot2 = "0.3.0"
rp2040-hal = { version = "0.11.0", features = ["critical-section-impl", "rt"] }
semver = "1.0.26"
serde = { version = "1.0.219", features = ["derive"] }
serde_arrays = "0.2.0"
serde_json = "1.0.141"
stm32f4xx-hal = { version = "0.22.1", features = ["usb_fs"] }
syn = "2.0.104"
toml = "0.9.2"
usb-device = "0.3.2"
usbd-hid = "0.8.2"
usbd-serial = "0.2.2"

[workspace.lints.clippy]
pedantic = "warn"
todo = "warn"
undocumented_unsafe_blocks = "warn"

[workspace.lints.rust]
unused_crate_dependencies = "warn"
unexpected_cfgs = { level = "warn" }

[profile.dev]
opt-level = "s"
lto = true
codegen-units = 1

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1
# missing_docs_in_private_items = "warn"
