[package]
description = "Proc Macros for kb_rs"
name = "kb_rs_macro_derive"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
quote = "1.0.40"
syn = { version = "2.0.101", features = ["extra-traits", "full"]}
proc-macro2 = "1.0.95"
