[package]
name = "keyboards"
version = "0.0.15"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
toml = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
# External crates
anyhow = { version = "1.0.98", optional = true }
semver = { version =  "1.0.26", optional = true }

[features]
default = []
std = ["anyhow", "semver", "serde", "toml"]
