[package]
description = "Qubit Keyboard Firmware."
name = "qubit"
version = "0.0.15"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
qubit_macros.workspace = true
cortex-m.workspace = true
cortex-m-rt.workspace = true
defmt.workspace = true
defmt-rtt.workspace = true
embedded-hal.workspace = true
panic-probe.workspace = true
rp2040-boot2.workspace = true
rp2040-hal = { workspace = true, features = ["rt", "critical-section-impl"] }
usb-device.workspace = true
usbd-hid.workspace = true
usbd-serial = { workspace = true, optional = true }
keyboards.workspace = true

[build-dependencies]
keyboards = { workspace = true, features = ["std"] }

[features]
default = ["serial", "silverplate"]
serial = ["usbd-serial"]
silverplate = []
