[package]
description = "Qubit Keyboard Firmware."
name = "qubit"
version = "0.0.16"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
# Qubit
qubit_macros.workspace = true
qubit_device.workspace = true
qubit_config.workspace = true
# Workspace
cortex-m.workspace = true
cortex-m-rt.workspace = true
defmt.workspace = true
defmt-rtt.workspace = true
embedded-hal.workspace = true
panic-probe.workspace = true
rp2040-boot2.workspace = true
rp2040-hal = { workspace = true, features = ["rt", "critical-section-impl"] }
usb-device.workspace = true
usbd-hid.workspace = true
usbd-serial = { workspace = true, optional = true }
constcat.workspace = true

[build-dependencies]
# Qubit
qubit_macros.workspace = true
qubit_config = { workspace = true, features = ["std"] }
qubit_device = { workspace = true, features = ["std"] }
# Workspace
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
# External
prettyplease = "0.2.35"

[features]
default = ["serial", "silverplate", "keyboard"]
keyboard = []
serial = ["usbd-serial"]
silverplate = []
