[package]
name = "qubit"
version = "0.0.175"
authors.workspace = true
edition.workspace = true
description = "Qubit Firmware."
license.workspace = true
publish.workspace = true

[dependencies]
constcat.workspace = true
cortex-m.workspace = true
cortex-m-rt.workspace = true
defmt = { workspace = true, optional = true }
defmt-rtt = { workspace = true, optional = true }
heapless.workspace = true
panic-probe.workspace = true
qubit_config.workspace = true
qubit_device.workspace = true
qubit_macros.workspace = true
usb-device.workspace = true
usbd-hid.workspace = true

[build-dependencies]
prettyplease.workspace = true
proc-macro2.workspace = true
qubit_config = { workspace = true, features = ["build"] }
qubit_device = { workspace = true, features = ["std"] }
qubit_macros.workspace = true
quote.workspace = true
syn.workspace = true

[target.'cfg(mcu = "rp2040")'.dependencies]
embedded-hal.workspace = true
rp2040-boot2.workspace = true
rp2040-hal.workspace = true

[target.'cfg(mcu = "stm32f411")'.dependencies]
fugit.workspace = true
stm32f4xx-hal = { workspace = true, features = ["stm32f411"] }

[features]
default = ["defmt", "silverplate"]
defmt = ["defmt-rtt", "dep:defmt", "heapless/defmt-03"]
silverplate = []

[lints]
workspace = true
