[package]
name = "qubit_config"
version = "0.0.175"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
semver = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
toml = { workspace = true, optional = true }

[features]
build = ["std"]
default = []
std = ["semver/serde", "serde", "toml"]

[lints]
workspace = true
