[package]
name = "qubit_device"
version = "0.0.16"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
# Qubit
qubit_config.workspace = true
# Workspace
# quote = { workspace = true, optional = true }
# proc-macro2 = { workspace = true, optional = true }
# syn = { workspace = true, optional = true }

[features]
default = []
std = []
# std = ["quote", "proc-macro2", "qubit_config/std"]
