[package]
description = "Macros for Qubit"
name = "qubit_macros"
version = "0.0.15"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
quote = "1.0.40"
syn = { version = "2.0.101", features = ["extra-traits", "full", "parsing"]}
proc-macro2 = "1.0.95"
chrono = "0.4.41"
