[package]
description = "Macros for Qubit."
name = "qubit_macros"
version = "0.0.16"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
# Qubit
qubit_config.workspace = true
# Workspace
quote.workspace = true
proc-macro2.workspace = true
syn = { workspace = true, features = ["extra-traits", "full", "parsing"] }
# External
chrono = "0.4.41"
