[package]
name = "qubit_macros"
version = "0.0.175"
authors.workspace = true
edition.workspace = true
description = "Macros for Qubit."
license.workspace = true
publish.workspace = true

[lib]
proc-macro = true

[dependencies]
chrono = { workspace = true, optional = true }
proc-macro2 = { workspace = true, optional = true }
qubit_config = { workspace = true, optional = true }
quote.workspace = true
syn = { workspace = true, features = ["extra-traits", "full", "parsing"] }

[features]
all = ["chrono", "import", "proc-macro2", "qubit_config"]
default = ["all"]
import = []

[lints]
workspace = true
